--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.66.4"
 joblib = "^1.4.2"
 setuptools = "^70.0.0"
 pyqt6 = "^6.7.0"
+pyshark = "^0.6"
 
 [tool.poetry.dev-dependencies]
 
