--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ pyshark
 NOTES
 wifisidechannels/components/wipicap/backends.c
 *.so
+DUMP0/
+DUMP1/
+DUMP/*.png
+BIG/
+bash/interact_STA.sh
+test.ipynb
