--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,13 @@ wifisidechannels/components/wipicap/backends.c
 *.so
 DUMP0/
 DUMP1/
+DUMP3/
 DUMP/*.png
 DUMP/*.dat
 BIG/
 bash/interact_STA.sh
 test.ipynb
 pictures/*/*.dat
-TEST_BFI
+TEST_BFI/
+
+
