--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ joblib = "^1.4.2"
 setuptools = "^70.0.0"
 pyqt6 = "^6.7.0"
 pyshark = "^0.6"
+paramiko = "^3.4.1"
+pyserialtransfer = "^2.6.9"
 
 [tool.poetry.dev-dependencies]
 
