--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ pyqt6 = "^6.7.0"
 pyshark = "^0.6"
 paramiko = "^3.4.1"
 pyserialtransfer = "^2.6.9"
+torch = "^2.4.1"
+torchvision = "^0.19.1"
+torchaudio = "^2.4.1"
+numpy = "<2"
 
 [tool.poetry.dev-dependencies]
 
